Fix global modal on mobile.

--- a/app/assets/stylesheets/modals.styl
+++ b/app/assets/stylesheets/modals.styl
@@ -832,7 +832,7 @@
               background-color: white
               margin-top: 50px
               @media phone
-                padding: 0 15px
+                padding: 0 20px
               .foot
                 display: none
               .icon-alert-bolt, .icon-calendar, .icon-house
@@ -862,7 +862,11 @@
               margin: 40px auto 20px
               overflow: auto
               @media phone
-                margin-top: 25px
+                margin-top: 10px
+                font-size: 1.5em
+                width: 50px
+                height: 50px
+                line-height: 50px
             .icon-check
               @media phone
                 margin-top: 50px
